# networking-bambuk

./: .gitignore  .project  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  tox.ini
devstack/: local.conf.agent.sample  local.conf.sample  local.conf.server.sample  override-defaults  plugin.sh  update_port_sample.sh
doc/source/: bambuk.pptx  bambuk_agent_data.puml  bambuk_rpc.puml  components.puml  conf.py  data_model.rst  features.rst  interfaces.puml  l2population.puml  requierements.rst  rpc_call.puml  spawn_vm.puml  use-cases.puml
etc/: hosts.tmpl
etc/init/: bambuk.conf  bambuk.service
etc/neutron/: dragonflow.ini.tmpl  neutron.conf.tmpl
networking_bambuk/: _i18n.py  version.py
networking_bambuk/agent/: bambuk_agent.py
networking_bambuk/agent/controller/: bambuk_controller.py  ovs_agent.py
networking_bambuk/agent/df/: df_agent_db.py  df_bsd_db.py  df_tiny_db.py
networking_bambuk/client_ext/: _providerport.py
networking_bambuk/cmd/: log_agent.py  neutron_bambuk_agent.py  plug_vif.py  startup.py
networking_bambuk/common/: config.py  constants.py  log_cursor.py  port_infos.py  update_actions.py
networking_bambuk/db/bambuk/: bambuk_db.py  create_update_log.py
networking_bambuk/extensions/: bambuk.py
networking_bambuk/l3/: l3_bambuk.py
networking_bambuk/ml2/: bambuk_db.py  bambuk_l2pop.py  bambuk_type_vxlan.py  mech_driver.py
networking_bambuk/rpc/: asynctcp_rpc.py  bambuk_rpc.py  rest_rpc.py  rpc_db.py  zeromq_rpc.py
networking_bambuk/rpc/rest/: rest_rpc.py
networking_bambuk/rpc/zeromq/: zeromq_rpc.py
networking_bambuk/services/bambuk/: bambuk_plugin.py
virsh/: README  create_ports.sh  create_vm.sh  delete_vm.sh  modify-domain.py  prepare.sh  update_ports.sh  vm_scripts_common.sh
virsh/templates/: configure.sh  vm-template.xml
(+11 files in other folders)
