[metadata]
name = networking-bambuk
summary = OpenStack Neutron integration for hybrid cloud
description-file =
    README.rst
author = OpenStack
author-email = ariel.zerbib@gmail.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_bambuk

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_bambuk/locale
domain = networking_bambuk

[update_catalog]
domain = networking_bambuk
output_dir = networking_bambuk/locale
input_file = networking_bambuk/locale/networking_bambuk.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bambuk/locale/networking_bambuk.pot

[wheel]
universal = 1

[entry_points]
oslo.config.opts =
    networking_bambuk = networking_bambuk.common.config:list_opts
neutron.ml2.mechanism_drivers =
    bambuk = networking_bambuk.ml2.mech_driver:BambukMechanismDriver
neutron.service_plugins =
    bambuk-router = networking_bambuk.l3.l3_bambuk:BambukL3RouterPlugin
dragonflow.nb_db_driver =
    bambuk_nb_db_driver = networking_bambuk.agent.df.df_tiny_db:TinyDbDriver

[pbr]
warnerrors = true
